fix emoticon alignment

--- a/src/ng/chat-output/chat-output.css
+++ b/src/ng/chat-output/chat-output.css
@@ -30,10 +30,11 @@ chat-output .badge {
 }
 
 chat-output .emoticon {
-    bottom: -4px;
+    bottom: -8px;
     max-height: 30px;
     margin-top: -30px;
     position: relative;
+    vertical-align: middle;
 }
 
 chat-output .badge:not(:first-child) {
